--- a/index.html
+++ b/index.html
@@ -45,25 +45,27 @@
         <section id="references">
             <h2>Řekli o mě</h2>
             <div id="carousel">
-                <button id="carousel-left">&lt;</button>
                 <div id="carousel-items">
                     <div class="carousel-item">
-                        <p>"Tondo, ty seš fakt šaman. Už půl roku nemůžu v noci spát, podkládám si všelijak ruku i rameno, abych si aspoň trochu ulevila. Teď jsem spala poprvé celou noc. To je neuvěřitelný pocit." <i>Margareta Janjic</i></p>
+                        <p>"Tondo, ty seš fakt šaman. Už půl roku nemůžu v noci spát, podkládám si všelijak ruku i rameno, abych si aspoň trochu ulevila. Teď jsem spala poprvé celou noc. To je neuvěřitelný pocit."  </p><i>Margareta Janjic</i></p>
                     </div>
                     <div class="carousel-item">
-                        <p>"Ahoj, hybnost ruky je teď mnohem lepší a ty svaly mě nebolí, tak jak jsem čekala. Moc děkuji, nečekala jsem takový pokrok." <i>Milena Bartíková</i></p>
+                        <p>"Ahoj, hybnost ruky je teď mnohem lepší a ty svaly mě nebolí, tak jak jsem čekala. Moc děkuji, nečekala jsem takový pokrok." </p><i>Milena Bartíková</i></p>
                     </div>
                     <div class="carousel-item">
-                        <p>"Díky Tondo, mé problémy s výhřezem v bederní páteři se začaly zlepšovat už po první návštěvě u tebe. Teď po čtyřech našich setkáních už jsem úplně bez potíží." <i>Milan Číž</i></p>
+                        <p>"Díky Tondo, mé problémy s výhřezem v bederní páteři se začaly zlepšovat už po první návštěvě u tebe. Teď po čtyřech našich setkáních už jsem úplně bez potíží." </p><i>Milan Číž</i></p>
                     </div>
                     <div class="carousel-item">
-                        <p>"Pane Vondruško, musím se Vám pochlubit. Dřív jsem nemohl skoro vůbec chodit. Když jsem šel do garáže, kterou mám půl kilometru daleko, musel jsem si třikrát sednout. Teď jsem byl se ženou na výletě, vůbec mi nestačila a to jsme ušli tři kilometry!" <i>Stanislav Merta</i></p>
+                        <p>"Pane Vondruško, musím se Vám pochlubit. Dřív jsem nemohl skoro vůbec chodit. Když jsem šel do garáže, kterou mám půl kilometru daleko, musel jsem si třikrát sednout. Teď jsem byl se ženou na výletě, vůbec mi nestačila a to jsme ušli tři kilometry!" </p><i>Stanislav Merta</i></p>
                     </div>
                     <div class="carousel-item">
-                        <p>"Tondo, když se mi podařil výhřez v krční páteři, už jsem věděla za kým mám, po úspěšném vyléčení ramene, jít. A i teď jsem úplně nedůvěřovala, když jsme začali jenom dýcháním. Ale teď už vím, že to byl správný postup a dostali jsme se přes různé uvolňování, rozhýbávání a cvičení až ke stavu, kdy se zase hýbu normálně." <i>Margareta Janjic</i></p>
+                        <p>"Tondo, když se mi podařil výhřez v krční páteři, už jsem věděla za kým mám, po úspěšném vyléčení ramene, jít. A i teď jsem úplně nedůvěřovala, když jsme začali jenom dýcháním. Ale teď už vím, že to byl správný postup a dostali jsme se přes různé uvolňování, rozhýbávání a cvičení až ke stavu, kdy se zase hýbu normálně." </p><i>Margareta Janjic</i></p>
                     </div>
                 </div>
-                <button id="carousel-right">&gt;</button>
+                <div id="carousel-controls">
+                    <button id="carousel-left">&lt;</button>
+                    <button id="carousel-right">&gt;</button>
+                </div>
             </div>
         </section>
         <section id="yoga">
@@ -141,24 +143,43 @@
         const carousel = document.getElementById('carousel-items');
         const leftButton = document.getElementById('carousel-left');
         const rightButton = document.getElementById('carousel-right');
+        const items = document.querySelectorAll('.carousel-item');
+        let currentIndex = 0;
 
-        let scrollAmount = 0;
+        function updateCarousel() {
+            items.forEach((item, index) => {
+                item.style.display = index === currentIndex ? 'block' : 'none';
+            });
+        }
 
         leftButton.addEventListener('click', () => {
-            scrollAmount -= 300; // Adjust scroll amount as needed
-            carousel.scrollTo({
-                left: scrollAmount,
-                behavior: 'smooth'
-            });
+            currentIndex = (currentIndex - 1 + items.length) % items.length;
+            updateCarousel();
         });
 
         rightButton.addEventListener('click', () => {
-            scrollAmount += 300; // Adjust scroll amount as needed
-            carousel.scrollTo({
-                left: scrollAmount,
-                behavior: 'smooth'
-            });
+            currentIndex = (currentIndex + 1) % items.length;
+            updateCarousel();
         });
+
+        // Swipe functionality for mobile
+        let startX = 0;
+        carousel.addEventListener('touchstart', (e) => {
+            startX = e.touches[0].clientX;
+        });
+
+        carousel.addEventListener('touchend', (e) => {
+            const endX = e.changedTouches[0].clientX;
+            if (startX - endX > 50) {
+                currentIndex = (currentIndex + 1) % items.length;
+            } else if (endX - startX > 50) {
+                currentIndex = (currentIndex - 1 + items.length) % items.length;
+            }
+            updateCarousel();
+        });
+
+        // Initialize carousel
+        updateCarousel();
     </script>
 </body>
 </html>
