--- a/index.html
+++ b/index.html
@@ -5,6 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Atelier Nirvan</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        /* Add global font style */
+        body {
+            font-family: Arial, sans-serif;
+        }
+
+        /* Add styles for the mobile menu to appear on the right */
+        #mobile-menu {
+            position: fixed;
+            top: 0;
+            right: 0;
+            width: 250px;
+            height: 100%;
+            background-color: #fff;
+            box-shadow: -2px 0 5px rgba(0, 0, 0, 0.5);
+            transform: translateX(100%);
+            transition: transform 0.3s ease-in-out;
+        }
+
+        #mobile-menu.visible {
+            transform: translateX(0);
+        }
+
+        #menu-button {
+            position: fixed;
+            top: 10px;
+            right: 10px;
+            z-index: 1000;
+        }
+    </style>
 </head>
 <body>
     <header>
