--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
             right: 10px;
             z-index: 1000;
         }
+
+        /* Ensure the font in menus matches the text */
+        #mobile-menu ul,
+        #desktop-menu ul {
+            font-family: Arial, sans-serif;
+        }
     </style>
 </head>
 <body>
