--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             font-family: Arial, sans-serif;
         }
 
-        /* Add styles for the mobile menu to appear on the right */
+        /* Adjust mobile menu to stay on the right and expand vertically */
         #mobile-menu {
             position: fixed;
             top: 0;
@@ -20,12 +20,24 @@
             height: 100%;
             background-color: #fff;
             box-shadow: -2px 0 5px rgba(0, 0, 0, 0.5);
+            overflow-y: auto; /* Enable scrolling if content exceeds height */
             transform: translateX(100%);
             transition: transform 0.3s ease-in-out;
         }
 
         #mobile-menu.visible {
             transform: translateX(0);
+        }
+
+        #mobile-menu ul {
+            margin: 0;
+            padding: 0;
+            list-style: none;
+        }
+
+        #mobile-menu ul li {
+            padding: 10px;
+            border-bottom: 1px solid #ddd;
         }
 
         #menu-button {
@@ -36,7 +48,6 @@
         }
 
         /* Ensure the font in menus matches the text */
-        #mobile-menu ul,
         #desktop-menu ul {
             font-family: Arial, sans-serif;
         }
