--- a/index.html
+++ b/index.html
@@ -5,105 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Atelier Nirvan</title>
     <link rel="stylesheet" href="styles.css">
-    <style>
-        /* Add global font style */
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f0f4f8; /* Light blue sky background */
-            color: #333; /* Neutral text color for readability */
-        }
-
-        /* Adjust mobile menu to expand downward and align to the left in the header */
-        #mobile-menu {
-            position: absolute;
-            top: 100%; /* Expand downward from the header */
-            left: 0;
-            width: 100%; /* Full width of the header */
-            background-color: #d9e2e6; /* Light gray stone background */
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-            overflow-y: auto; /* Enable scrolling if content exceeds height */
-            display: none; /* Initially hidden */
-            z-index: 1000;
-        }
-
-        #mobile-menu.visible {
-            display: block; /* Show menu when toggled */
-        }
-
-        #mobile-menu ul {
-            margin: 0;
-            padding: 0;
-            list-style: none;
-            font-family: Arial, sans-serif; /* Ensure the font in mobile menu matches the text */
-        }
-
-        #mobile-menu ul li {
-            padding: 10px;
-            border-bottom: 1px solid #b0b8bc; /* Subtle border for separation */
-        }
-
-        #menu-button {
-            position: absolute;
-            top: 10px;
-            left: 10px; /* Align menu button to the left */
-            z-index: 1001;
-            color: #fff; /* Ensure menu button is visible */
-            background: none;
-            border: none;
-            font-size: 1.2em;
-            cursor: pointer;
-        }
-
-        /* Ensure the font in menus matches the text */
-        #desktop-menu ul {
-            font-family: Arial, sans-serif; /* Ensure the font in desktop menu matches the text */
-        }
-
-        /* Make the header fixed at the top with visible text */
-        header {
-            position: relative;
-            z-index: 1002; /* Ensure header stays above the menu */
-            top: 0;
-            left: 0;
-            width: 100%;
-            background-color: #8fa998; /* Light pine green background */
-            color: #fff; /* White text for visibility */
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-            padding: 10px 20px; /* Add padding for better spacing */
-        }
-
-        header h1 {
-            margin: 0;
-            font-size: 1.5em; /* Adjust font size for readability */
-        }
-
-        /* Adjust main content to account for fixed header */
-        main {
-            margin-top: 60px; /* Adjust based on header height */
-        }
-
-        /* Footer styling */
-        footer {
-            background-color: #d9e2e6; /* Light gray stone background */
-            color: #333; /* Neutral text color */
-            text-align: center;
-            padding: 10px 0;
-        }
-
-        /* Links styling */
-        a {
-            color: #4a90e2; /* Light blue for links */
-            text-decoration: none;
-        }
-
-        a:hover {
-            text-decoration: underline;
-        }
-    </style>
+    <script src="function.js" defer></script>
 </head>
 <body>
     <header>
-        <h1>Atelier Nirvan</h1>
+        <div id="siteName">Atelier Nirvan</div>
         <button id="menu-button">☰</button>
         <nav id="mobile-menu">
             <ul>
