--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li><a href="#references">Reference</a></li>
                 <li><a href="#yoga">Jóga</a></li>
                 <li><a href="#therapy">Terapie</a></li>
-                <li><a href="#about">O mně</a></li>
+                <li><a href="#about">O mě</a></li>
                 <li><a href="#contact">Kontakt</a></li>
             </ul>
         </nav>
