--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Atelier Nirvan</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="function.js" async="true"></script>
+    <script src="function.js" defer></script>
 </head>
 <body>
     <header>
