--- a/index.html
+++ b/index.html
@@ -137,145 +137,6 @@
         <footer>
             <p>&copy; 2025 Atelier Nirvan</p>
         </footer>
-        <script>
-        // Smooth scrolling for section navigation
-        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-            anchor.addEventListener('click', function (e) {
-                e.preventDefault();
-                document.querySelector(this.getAttribute('href')).scrollIntoView({
-                    behavior: 'smooth'
-                });
-            });
-        });
-
-        // Function to collapse the mobile menu
-        function collapseMobileMenu() {
-            const mobileMenu = document.getElementById('mobile-menu');
-            mobileMenu.classList.remove('visible'); // Ensure the menu is hidden
-        }
-
-        // Toggle mobile menu visibility
-        const menuButton = document.getElementById('menu-button');
-        const mobileMenu = document.getElementById('mobile-menu');
-        menuButton.addEventListener('click', () => {
-            mobileMenu.classList.toggle('visible');
-        });
-
-        // Toggle "about" section visibility
-        const aboutToggle = document.getElementById('about-toggle');
-        const aboutFull = document.getElementById('about-full');
-        const aboutSummary = document.getElementById('about-summary');
-
-        aboutToggle.addEventListener('click', () => {
-            if (aboutFull.style.display === 'none') {
-                aboutFull.style.display = 'block';
-                 aboutSummary.style.display = 'none';
-                aboutToggle.textContent = 'Zobrazit méně';
-            } else {
-                aboutFull.style.display = 'none';
-                aboutSummary.style.display = 'block';
-                aboutToggle.textContent = 'Zobrazit více';
-            }
-        });
-
-        // Záložní reference pro případ fetch chyby
-        const fallbackReferences = [
-           {text: "Tondo, ty seš fakt šaman. Už půl roku nemůžu v noci spát, podkládám si všelijak ruku i rameno, abych si aspoň trochu ulevila. Teď jsem spala poprvé celou noc. To je neuvěřitelný pocit.",
-             author: "Margareta Janjic"
-    },
-    {
-        text: "Ahoj, hybnost ruky je teď mnohem lepší a ty svaly mě nebolí, tak jak jsem čekala. Moc děkuji, nečekala jsem takový pokrok.",
-        author: "Milena Bartíková"
-    },
-    {
-        text: "Díky Tondo, mé problémy s výhřezem v bederní páteři se začaly zlepšovat už po první návštěvě u tebe. Teď po čtyřech našich setkáních už jsem úplně bez potíží.",
-        author: "Milan Číž"
-    },
-    {
-        text: "Pane Vondruško, musím se Vám pochlubit. Dřív jsem nemohl skoro vůbec chodit. Když jsem šel do garáže, kterou mám půl kilometru daleko, musel jsem si třikrát sednout. Teď jsem byl se ženou na výletě, vůbec mi nestačila a to jsme ušli tři kilometry!",
-        author: "Stanislav Merta"
-    },
-    {
-        text: "Tondo, když se mi podařil výhřez v krční páteři, už jsem věděla za kým mám, po úspěšném vyléčení ramene, jít. A i teď jsem úplně nedůvěřovala, když jsme začali jenom dýcháním. Ale teď už vím, že to byl správný postup a dostali jsme se přes různé uvolňování, rozhýbávání a cvičení až ke stavu, kdy se zase hýbu normálně.",
-        author: "Margareta Janjic"
-    }
-        ];
-
-        // Load references from JSON file nebo fallback
-        async function loadReferences() {
-            const carouselItems = document.getElementById('carousel-items');
-            try {
-                const response = await fetch('references.json');
-                if (!response.ok) throw new Error(`Failed to fetch references: ${response.status}`);
-                const references = await response.json();
-                if (references.length === 0) {
-                    carouselItems.innerHTML = '<p>No references available.</p>';
-                    return;
-                }
-                references.forEach(reference => {
-                    const item = document.createElement('div');
-                    item.className = 'carousel-item';
-                    item.innerHTML = `<p>${reference.text}</p><i>${reference.author}</i>`;
-                    carouselItems.appendChild(item);
-                });
-                updateCarousel();
-            } catch (error) {
-                console.warn('Error loading references, using fallback:', error);
-                carouselItems.innerHTML = '';
-                fallbackReferences.forEach(reference => {
-                    const item = document.createElement('div');
-                    item.className = 'carousel-item';
-                    item.innerHTML = `<p>${reference.text}</p><i>${reference.author}</i>`;
-                    carouselItems.appendChild(item);
-                });
-                updateCarousel();
-            }
-        }
-
-        // Carousel functionality
-        const carousel = document.getElementById('carousel-items');
-        const leftButton = document.getElementById('carousel-left');
-        const rightButton = document.getElementById('carousel-right');
-        let currentIndex = 0;
-
-        function updateCarousel() {
-            const items = document.querySelectorAll('.carousel-item');
-            items.forEach((item, index) => {
-                item.style.display = index === currentIndex ? 'block' : 'none';
-            });
-        }
-
-        leftButton.addEventListener('click', () => {
-            const items = document.querySelectorAll('.carousel-item');
-            currentIndex = (currentIndex - 1 + items.length) % items.length;
-            updateCarousel();
-        });
-
-        rightButton.addEventListener('click', () => {
-            const items = document.querySelectorAll('.carousel-item');
-            currentIndex = (currentIndex + 1) % items.length;
-            updateCarousel();
-        });
-
-        // Swipe functionality for mobile
-        let startX = 0;
-        carousel.addEventListener('touchstart', (e) => {
-            startX = e.touches[0].clientX;
-        });
-
-        carousel.addEventListener('touchend', (e) => {
-            const endX = e.changedTouches[0].clientX;
-            const items = document.querySelectorAll('.carousel-item');
-            if (startX - endX > 50) {
-                currentIndex = (currentIndex + 1) % items.length;
-            } else if (endX - startX > 50) {
-                currentIndex = (currentIndex - 1 + items.length) % items.length;
-            }
-            updateCarousel();
-        });
-
-        // Initialize carousel
-        document.addEventListener('DOMContentLoaded', loadReferences);
-    </script>
+        <!-- JavaScript je nyní pouze ve function.js -->
     </body>
 </html>
