--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <header>
             <button id="menu-button">☰</button>
-            <div id="siteName">Atelier Nirvan</div>
+            <div id="siteName">Atelier Nirván<img src="images/nirvan_logo.svg" alt="Nirvan logo"></div>
             <nav id="mobile-menu">
                 <ul onclick="collapseMobileMenu()">
                     <li><a href="#home">Domů</a></li>
