--- a/index.html
+++ b/index.html
@@ -94,17 +94,9 @@
                     celého organismu.</p>
             </section>
             <section id="about">
-                <h2>O mě</h2>
-                <p id="about-summary">
-                    Masážím jsem se začal věnovat už v patnácti letech kvůli
-                    chronickým bolestem zad mého otce a vlastnímu kolapsu, který
-                    mě přiměl ke změně životního směru. Postupně jsem absolvoval
-                    masérské i jógové kurzy a objevil hlubší propojení těla,
-                    dechu a duševní rovnováhy. Ve své praxi kombinuji různé
-                    terapeutické techniky a ke každému klientovi přistupuji
-                    individuálně podle jeho potřeb.
-                </p>
-                <p id="about-full" style="display: none;">
+                    <div id="top">Jméno <b>„Nirván“</b> jsem přijal od svého indického učitele. Pro mě znamená nadhled, celistvost a schopnost vidět věci komplexně — člověka, tělo i duši.</div>
+                    <div id="bottom">Masírovat jsem začal v patnácti. Intuice mě vedla, ale časem jsem ji doplnil vzděláním a absolvoval první masérský kurz. Postupně jsem přidal další techniky a přístupy. Zlom přišel s jógovým výcvikem, kde se mi spojily pohyb, dech, klid a hlubší rovnováha těla i mysli.</div>
+                <!-- <p id="about-full" style="display: none;">
                     Masážím jsem se začal věnovat už v patnácti letech, a to
                     díky chronickým bolestem zad mého otce. Ačkoli jsem celý
                     život aktivně sportoval, s přibývajícím věkem a pracovním
@@ -126,7 +118,7 @@
                     cvičení a meditační techniky. Vždy přistupuji ke klientovi
                     individuálně, podle jeho aktuálního stavu a potřeb.
                 </p>
-                <button id="about-toggle">Zobrazit více</button>
+                <button id="about-toggle">Zobrazit více</button> -->
             </section>
             <section id="contact">
                 <h2>Kontakt</h2>
