--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     celého organismu.</p>
             </section>
             <section id="about">
-                    <div id="top">Jméno <b>„Nirván“</b> jsem přijal od svého indického učitele. Pro mě znamená nadhled, celistvost a schopnost vidět věci komplexně — člověka, tělo i duši.</div>
+                    <div id="top">Jméno <i>„Nirván“</i> jsem přijal od svého indického učitele. Pro mě znamená nadhled, celistvost a schopnost vidět věci komplexně — člověka, tělo i duši.</div>
                     <div id="bottom">Masírovat jsem začal v patnácti. Intuice mě vedla, ale časem jsem ji doplnil vzděláním a absolvoval první masérský kurz. Postupně jsem přidal další techniky a přístupy. Zlom přišel s jógovým výcvikem, kde se mi spojily pohyb, dech, klid a hlubší rovnováha těla i mysli.</div>
                 <!-- <p id="about-full" style="display: none;">
                     Masážím jsem se začal věnovat už v patnácti letech, a to
